[package]
name = "rimap-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Rusty IMAP MCP server: security-first MCP server for IMAP email access."

[lints]
workspace = true

[lib]
name = "rimap_server"
path = "src/lib.rs"

[[bin]]
name = "rusty-imap-mcp"
path = "src/main.rs"

[dependencies]
rimap-core = { path = "../rimap-core", version = "1.0.0" }
rimap-config = { path = "../rimap-config", version = "1.0.0" }
rimap-authz = { path = "../rimap-authz", version = "1.0.0" }
rimap-audit = { path = "../rimap-audit", version = "1.0.0" }
rimap-content = { path = "../rimap-content", version = "1.0.0" }
rimap-imap = { path = "../rimap-imap", version = "1.0.0" }
rimap-smtp = { path = "../rimap-smtp", version = "1.0.0" }
mail-builder = { workspace = true }
rmcp = { workspace = true }
schemars = { workspace = true }
infer = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
anyhow = { workspace = true }
secrecy = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
governor = { workspace = true }
arc-swap = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
mail-parser = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
