[package]
name = "rimap-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Rusty IMAP MCP server: security-first MCP server for IMAP email access."

[lints]
workspace = true

[features]
default = []
# Gated entry points for integration tests that need to exercise the
# full dispatch pipeline (posture → breaker → rate → audit envelope →
# handler) without re-implementing the composition in each test.
test-support = []

[lib]
name = "rimap_server"
path = "src/lib.rs"

[[bin]]
name = "rusty-imap-mcp"
path = "src/main.rs"

[dependencies]
thiserror = { workspace = true }
rimap-core = { path = "../rimap-core", version = "1.0.0" }
rimap-config = { path = "../rimap-config", version = "1.0.0" }
rimap-authz = { path = "../rimap-authz", version = "1.0.0" }
rimap-audit = { path = "../rimap-audit", version = "1.0.0" }
rimap-content = { path = "../rimap-content", version = "1.0.0" }
rimap-imap = { path = "../rimap-imap", version = "1.0.0" }
rimap-smtp = { path = "../rimap-smtp", version = "1.0.0" }
mail-builder = { workspace = true }
rmcp = { workspace = true }
schemars = { workspace = true }
infer = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
anyhow = { workspace = true }
secrecy = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
governor = { workspace = true }
arc-swap = { workspace = true }
tempfile = { workspace = true }

[target.'cfg(unix)'.dependencies]
rustix = { version = "1.1", default-features = false, features = ["process"] }

[dev-dependencies]
assert_cmd = { workspace = true }
temp-env = { workspace = true }
predicates = { workspace = true }
mail-parser = { workspace = true }
rimap-audit = { path = "../rimap-audit", version = "1.0.0", features = ["test-injection"] }
rimap-config = { path = "../rimap-config", version = "1.0.0", features = ["test-support"] }
# Self dev-dep enables the `test-support` feature unconditionally for
# integration tests, so `ImapMcpServer::execute_tool_for_test` is in
# scope without every test harness passing `--features test-support`.
rimap-server = { path = ".", version = "1.0.0", features = ["test-support"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile = { workspace = true }
