[package]
name = "rimap-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Rusty IMAP MCP server: security-first MCP server for IMAP email access."

[lints]
workspace = true

[features]
default = []
# Gated entry points for integration tests that need to exercise the
# full dispatch pipeline (posture → breaker → rate → audit envelope →
# handler) without re-implementing the composition in each test.
# Also enables the `--allow-empty-accounts` CLI flag on the binary so
# the wire-conformance harness (#263) can boot with `accounts = []`;
# propagates to `rimap-config/test-support` to expose
# `load_and_validate_allowing_empty`.
#
# CONSTRAINT: code under `#[cfg(feature = "test-support")]` MUST NOT
# alter any MCP wire-protocol behavior — the initialize handshake,
# tools/list, resources/list, JSON-RPC error mapping, or notification
# acceptance. The Phase 2 Node conformance harness (issue #264) spawns
# this binary with `--features test-support` enabled; if any feature
# path here changes the wire shape, Phase 2 tests the test-support
# binary's wire shape rather than the production binary's, silently
# voiding its regression nets. See:
#   docs/superpowers/specs/2026-05-12-mcp-conformance-node-design.md §4.7
test-support = ["rimap-config/test-support"]

[lib]
name = "rimap_server"
path = "src/lib.rs"

[[bin]]
name = "rusty-imap-mcp"
path = "src/main.rs"

[dependencies]
rimap-core = { path = "../rimap-core", version = "0.1.0" }
rimap-config = { path = "../rimap-config", version = "0.1.0" }
rimap-authz = { path = "../rimap-authz", version = "0.1.0" }
rimap-audit = { path = "../rimap-audit", version = "0.1.0" }
rimap-content = { path = "../rimap-content", version = "0.1.0" }
rimap-imap = { path = "../rimap-imap", version = "0.1.0" }
rimap-smtp = { path = "../rimap-smtp", version = "0.1.0" }
mail-builder = { workspace = true }
rmcp = { workspace = true }
schemars = { workspace = true }
infer = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
anyhow = { workspace = true }
secrecy = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
governor = { workspace = true }
arc-swap = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
jsonschema = { workspace = true }
mail-parser = { workspace = true }
rimap-audit = { path = "../rimap-audit", version = "0.1.0", features = ["test-injection"] }
rimap-config = { path = "../rimap-config", version = "0.1.0", features = ["test-support"] }
rimap-imap = { path = "../rimap-imap", version = "0.1.0", features = ["test-support"] }
# Self dev-dep enables the `test-support` feature unconditionally for
# integration tests, so `ImapMcpServer::execute_tool_for_test` is in
# scope without every test harness passing `--features test-support`.
rimap-server = { path = ".", version = "0.1.0", features = ["test-support"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "process", "io-util"] }
tempfile = { workspace = true }
